syntax = "proto3";

option go_package = "g/rpc/notifier";

message NotificationRequest {
    Type notification_type = 1;
    string message = 2;
    repeated string recipients = 3;
    string subject = 4;
    string body = 5;
    string sender = 6;
    repeated string cc = 7;
    repeated string bcc = 8;

    enum Type {
        INVALID = 0;
        SMS = 1;
        CALL = 2;
        EMAIL = 3;
        PUSH = 4;
    }
}
